@@ -18,7 +18,7 @@
 
 using System;
 using System.Diagnostics.CodeAnalysis;
-
+using System.Threading;
 using KGySoft.ComponentModel;
 using KGySoft.Drawing.ImagingTools.ViewModel;
 
@@ -30,6 +30,9 @@ namespace KGySoft.Drawing.ImagingTools.View.UserControls
         where TViewModel : IDisposable // BUG: Actually should be ViewModelBase but WinForms designer with derived types dies from that
     {
         #region Fields
+
+        private readonly int threadId;
+        private readonly ManualResetEventSlim handleCreated;
 
         private TViewModel? vm;
         private bool isLoaded;
@@ -79,6 +82,8 @@ namespace KGySoft.Drawing.ImagingTools.View.UserControls
         protected MvvmBaseUserControl()
         {
             CommandBindings = new WinFormsCommandBindingsCollection();
+            threadId = Thread.CurrentThread.ManagedThreadId;
+            handleCreated = new ManualResetEventSlim(false);
         }
 
         #endregion
@@ -117,6 +122,12 @@ namespace KGySoft.Drawing.ImagingTools.View.UserControls
             vmb.ViewLoaded();
         }
 
+        protected override void OnHandleCreated(EventArgs e)
+        {
+            base.OnHandleCreated(e);
+            handleCreated.Set();
+        }
+
         protected override void Dispose(bool disposing)
         {
             if (disposing)
@@ -131,10 +142,26 @@ namespace KGySoft.Drawing.ImagingTools.View.UserControls
 
         private void InvokeIfRequired(Action action)
         {
-            if (InvokeRequired)
+            if (Disposing || IsDisposed)
+                return;
+
+            try
+            {
+                // no invoke is required (not using InvokeRequired because that may return false if handle is not created yet)
+                if (threadId == Thread.CurrentThread.ManagedThreadId)
+                {
+                    action.Invoke();
+                    return;
+                }
+
+                if (!handleCreated.IsSet)
+                    handleCreated.Wait();
                 Invoke(action);
-            else
-                action.Invoke();
+            }
+            catch (ObjectDisposedException)
+            {
+                // it can happen that actual Invoke is started to execute only after querying isClosing and when Disposing and IsDisposed both return false
+            }
         }
 
         #endregion
